--- a/libcal/custom-header.html
+++ b/libcal/custom-header.html
@@ -58,7 +58,7 @@
             <li><a href="https://libraries.mit.edu/barker">Barker Library</a></li>
             <li><a href="https://libraries.mit.edu/dewey">Dewey Library</a></li>
             <li><a href="https://libraries.mit.edu/hayden">Hayden Library</a></li>
-            <li><a href="https://libraries.mit.edu/archives">Institute Archives &amp; Special Collections</a></li>
+            <li><a href="https://libraries.mit.edu/archives">Distinctive Collections</a></li>
             <li><a href="https://libraries.mit.edu/music">Lewis Music Library</a></li>
             <li><a href="https://libraries.mit.edu/lsa">Library Storage Annex</a></li>
             <li><a href="https://libraries.mit.edu/rotch">Rotch Library</a></li>
