Removes mention of LibX

--- a/libguides/custom-header.html
+++ b/libguides/custom-header.html
@@ -38,7 +38,6 @@
           <ul class="list-unbulleted">
             <li><a href="https://libraries.mit.edu/fulltext">FullText Finder <span class="about">Find specific citations</span></a></li>
             <li><a href="http://libguides.mit.edu/google/googlescholar">Google Scholar for MIT <span class="about">Change settings to get better access</span></a></li>
-            <li><a href="https://libraries.mit.edu/libx">LibX <span class="about">Search/authenticate via browser</span></a></li>
             <li><a href="http://dspace.mit.edu/">DSpace@MIT <span class="about">MIT research</span></a></li>
             <li><a href="http://dome.mit.edu/">Dome <span class="about">MIT-digitized images, maps, etc.</span></a></li>
             <li><a href="https://libraries.mit.edu/about/site-search">Site search</a></li>
@@ -119,7 +118,7 @@
             <li><a href="https://libraries.mit.edu/ask">Ask us <span class="about">Email, chat, call, drop by</span></a></li>
             <li><a href="https://libraries.mit.edu/experts">Research guides &amp; expert librarians <span class="about">For every research interest</span></a></li>
             <li><a href="https://libraries.mit.edu/offcampus">Connect from on and off-campus <span class="about">Tips &amp; tricks</span></a></li>
-            <li><a href="https://libraries.mit.edu/productivity-tools">Productivity tools <span class="about">Apps, LibX, RSS, etc.</span></a></li>
+            <li><a href="https://libraries.mit.edu/productivity-tools">Productivity tools <span class="about">Apps, RSS, etc.</span></a></li>
             <li><a href="https://libraries.mit.edu/new-books">New books by subject <span class="about">Browse or subscribe to RSS feeds</span></a></li>
             <li><a href="https://libraries.mit.edu/research-support" class="bottom">More research support</a></li>
           </ul>
