--- a/libguides/custom-header.html
+++ b/libguides/custom-header.html
@@ -144,6 +144,7 @@
         <div class="col-1 flex-item">
           <h3 class="heading-col">About us</h3>
           <ul class="list-unbulleted">
+            <li><a href="https://libraries.mit.edu/about/organization">About our organization</a></li>
             <li><a href="https://libraries.mit.edu/contact">Contact us</a></li>
             <li><a href="https://libraries.mit.edu/use-policies">Library use policy</a></li>
             <li><a href="https://libraries.mit.edu/jobs">Jobs</a></li>
