--- a/libguides/custom-header.html
+++ b/libguides/custom-header.html
@@ -28,7 +28,7 @@
             <li><a href="https://libraries.mit.edu/quicksearch">Quick search <span class="about">Books, articles, and more at MIT</span></a></li>
             <li><a href="https://libraries.mit.edu/vera">Vera <span class="about">E-journals &amp; databases</span></a></li>
             <li><a href="https://libraries.mit.edu/barton">Barton catalog <span class="about">Classic catalog search</span></a></li>
-            <li><a href="http://mit.worldcat.org">WorldCat<span class="about">Books &amp; more worldwide</span></a></li>
+            <li><a href="https://libraries.mit.edu/worldcat">WorldCat<span class="about">Books &amp; more worldwide</span></a></li>
             <li><a href="https://libraries.mit.edu/barton-reserves">Course reserves</a></li>
             <li><a href="https://libraries.mit.edu/search" class="bottom extra"><span>More search tools &amp; help</span> <span class="about">Images, data, DSpace, etc.</span></a></li>
           </ul>
@@ -37,10 +37,10 @@
           <h3 class="heading-col">Also try</h3>
           <ul class="list-unbulleted">
             <li><a href="https://libraries.mit.edu/fulltext">FullText Finder <span class="about">Find specific citations</span></a></li>
-            <li><a href="http://libguides.mit.edu/google/googlescholar">Google Scholar for MIT <span class="about">Change settings to get better access</span></a></li>
-            <li><a href="http://dspace.mit.edu/">DSpace@MIT <span class="about">MIT research</span></a></li>
-            <li><a href="http://dome.mit.edu/">Dome <span class="about">MIT-digitized images, maps, etc.</span></a></li>
-            <li><a href="https://libraries.mit.edu/about/site-search">Site search</a></li>
+            <li><a href="https://libraries.mit.edu/google-scholar-tips">Google Scholar for MIT <span class="about">Change settings to get better access</span></a></li>
+            <li><a href="https://libraries.mit.edu/dspace">DSpace@MIT <span class="about">MIT research</span></a></li>
+            <li><a href="https://libraries.mit.edu/dome">Dome <span class="about">MIT-digitized images, maps, etc.</span></a></li>
+            <li><a href="https://libraries.mit.edu/site-search">Site search</a></li>
           </ul>
         </div>
       </div><!-- end div.links-sub -->
@@ -88,8 +88,8 @@
           <h3 class="heading-col">Renew, request, suggest</h3>
           <ul class="list-unbulleted">
             <li><a href="https://libraries.mit.edu/barton-account">Your Account <span class="about">Renew MIT items</span></a></li>
-            <li><a href="http://library.mit.edu">Barton catalog <span class="about">Request items owned by MIT</span></a></li>
-            <li><a href="http://mit.worldcat.org">WorldCat <span class="about">Request items not owned by MIT</span></a></li>
+            <li><a href="https://libraries.mit.edu/barton">Barton catalog <span class="about">Request items owned by MIT</span></a></li>
+            <li><a href="https://libraries.mit.edu/worldcat">WorldCat <span class="about">Request items not owned by MIT</span></a></li>
             <li><a href="https://libraries.mit.edu/illiad">ILLiad <span class="about">Track your Interlibrary Borrowing requests</span></a></li>
             <li><a href="https://libraries.mit.edu/suggest-purchase">Suggest a purchase</a></li>
             <li><a href="https://libraries.mit.edu/borrow" class="bottom">More options &amp; help</a></li>
@@ -99,8 +99,8 @@
           <h3 class="heading-col">More information</h3>
           <ul class="list-unbulleted">
             <li><a href="https://libraries.mit.edu/getit">Get it <span class="about">Understand your options</span></a></li>
-            <li><a href="http://libguides.mit.edu/circfaq">Circulation FAQ <span class="about">Info about fines, renewing, etc.</span></a></li>
-            <li><a href="http://libguides.mit.edu/reserves">Course reserves &amp; TIP FAQ</a></li>
+            <li><a href="https://libraries.mit.edu/circ">Circulation FAQ <span class="about">Info about fines, renewing, etc.</span></a></li>
+            <li><a href="https://libraries.mit.edu/reserves">Course reserves &amp; TIP FAQ</a></li>
             <li><a href="https://libraries.mit.edu/otherlibraries">Visit non-MIT libraries <span class="about">Harvard, Borrow Direct, etc.</span></a></li>
           </ul>
         </div>
@@ -126,10 +126,10 @@
         <div class="col-2 flex-item">
           <h3 class="heading-col">Publishing &amp; content management</h3>
           <ul class="list-unbulleted">
-            <li><a href="http://libguides.mit.edu/references">Citation &amp; writing tools <span class="about">Mendeley, Zotero, &amp; Overleaf</span></a></li>
-            <li><a href="http://libguides.mit.edu/citing">Citing sources <span class="about">Avoid plagiarism, format references, etc.</span></a></li>
-            <li><a href="http://libguides.mit.edu/manage-info">Manage your info &amp; data <span class="about">Organize your data, files, and more</span></a></li>
-            <li><a href="http://libguides.mit.edu/publishing">Getting published <span class="about">Tools &amp; help</span></a></li>
+            <li><a href="https://libraries.mit.edu/references">Citation &amp; writing tools <span class="about">Mendeley, Zotero, &amp; Overleaf</span></a></li>
+            <li><a href="https://libraries.mit.edu/citing">Citing sources <span class="about">Avoid plagiarism, format references, etc.</span></a></li>
+            <li><a href="https://libraries.mit.edu/manage-info">Manage your info &amp; data <span class="about">Organize your data, files, and more</span></a></li>
+            <li><a href="https://libraries.mit.edu/publishing">Getting published <span class="about">Tools &amp; help</span></a></li>
             <li><a href="https://libraries.mit.edu/scholarly">Scholarly publishing <span class="about">Open access &amp; copyright</span></a></li>
           </ul>
         </div>
