Re-order list of libraries
This also swaps /archives for /distinctive-collections

--- a/libguides/custom-header.html
+++ b/libguides/custom-header.html
@@ -57,10 +57,10 @@
             <li><a href="https://libraries.mit.edu/barker">Barker Library</a></li>
             <li><a href="https://libraries.mit.edu/dewey">Dewey Library</a></li>
             <li><a href="https://libraries.mit.edu/hayden">Hayden Library</a></li>
-            <li><a href="https://libraries.mit.edu/archives">Distinctive Collections</a></li>
+            <li><a href="https://libraries.mit.edu/rotch">Rotch Library</a></li>
+            <li><a href="https://libraries.mit.edu/distinctive-collections">Distinctive Collections</a></li>
             <li><a href="https://libraries.mit.edu/music">Lewis Music Library</a></li>
             <li><a href="https://libraries.mit.edu/lsa">Library Storage Annex</a></li>
-            <li><a href="https://libraries.mit.edu/rotch">Rotch Library</a></li>
             <li><a href="https://libraries.mit.edu/hours" class="bottom">All hours &amp; locations</a></li>
           </ul>
         </div>
