Rename link titles to be less personal
Use "About the Libraries" rather than "About us", for example

--- a/libguides/custom-header.html
+++ b/libguides/custom-header.html
@@ -137,12 +137,12 @@
     </li><!-- end div.links-primary -->
     <li class="link-primary flex-end">
       <h2 class="main-nav-header">
-        <a id="main-nav-aboutmenu-title" href="https://libraries.mit.edu/about" class="no-underline main-nav-link">About us</a>
-        <button class="menu-control sr">About us menu</button>
+        <a id="main-nav-aboutmenu-title" href="https://libraries.mit.edu/about" class="no-underline main-nav-link">About</a>
+        <button class="menu-control sr">About menu</button>
       </h2>
       <div aria-labelledby="main-nav-aboutmenu-title" id="main-nav-aboutmenu" class="links-sub flex-container push group">
         <div class="col-1 flex-item">
-          <h3 class="heading-col">About us</h3>
+          <h3 class="heading-col">About the Libraries</h3>
           <ul class="list-unbulleted">
             <li><a href="https://libraries.mit.edu/about/organization">About our organization</a></li>
             <li><a href="https://libraries.mit.edu/contact">Contact us</a></li>
